[package]
name = "http-client-eventsource"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
futures = "0.3.30"
eventsource-stream = "0.2.3"
http-client = { git = "https://github.com/fdionisi/http-client", rev = "033ac96ab12ac3d13b78f9725b237380917c7094" }
pin-project-lite = "0.2.14"
futures-util = "0.3.30"
bytes = "1.7.2"
futures-timer = "3.0.3"
mime = "0.3.17"
