[package]
name = "http-client-eventsource"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eventsource-stream = "0.2.3"
futures = "0.3"
futures-timer = "3.0"
http-client = { git = "https://github.com/fdionisi/http-client", rev = "c4a778815ecb94411f7db6385052655b181a9676" }
mime = "0.3.17"
pin-project-lite = "0.2.14"
